<resources>
    <string name="app_name">오늘할일\n내일로</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bottom_nav_home">홈</string>
    <string name="bottom_nav_search">통합검색</string>
    <string name="bottom_nav_my_plan">마이플랜</string>
    <string name="bottom_nav_my_info">내정보</string>
    <string name="app_name_korea">내일로 투어</string>
    <string name="no_info">정보없음</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="password_check">password check</string>
    <string name="phone_number">phone number(예시 01012345678)</string>
    <string name="logout_fail_message">로그아웃에 실패하였습니다.</string>
    <string name="deactivate_fail_message">회원탈퇴에 실패하였습니다.</string>
    <string name="category_search_tourspot">관광지 찾기</string>
    <string name="category_train_info">기차 정보</string>
    <string name="category_serarch_restraunt">식당 찾기</string>
    <string name="category_search_house">숙박 찾기</string>
    <string name="category_search_reports">레포츠 찾기</string>
    <string name="category_search_facility">문화시설 찾기</string>
    <string name="category_festival">측제/행사 찾기</string>
    <string name="category_weather">날씨 정보</string>
    <string name="current_weather_status">날씨 상태</string>
    <string name="current_weather_temperature">현재 온도</string>
    <string name="current_weather_min_temperature">최저 온도</string>
    <string name="current_weather_max_temperature">최고 온도</string>
    <string name="current_weather_pressure">현재 기압</string>
    <string name="current_weather_humidity">현제 습도</string>
    <string name="train_arrival_station"> · 도착역</string>
    <string name="train_arrival_time">도착</string>
    <string name="train_departure_station"> · 출발역</string>
    <string name="train_departure_time">출발</string>
    <string name="train_departure_date"> · 출발날짜</string>
    <string name="train_type"> · 열차종류</string>
    <string name="train_type_dot_blank">열차\n종류</string>
    <string name="train_price">가격</string>
    <string name="train_number">열차\n번호</string>
    <string name="train_arrival_station_select">도착역을 선택해주세요.</string>
    <string name="train_departure_station_select">출발역을 선택해주세요.</string>
    <string name="train_departure_date_select">출발날짜를 선택해주세요.</string>
    <string name="train_type_select">열차종류를 선택해주세요.</string>
    <string name="train_info_search">조회하기</string>
    <string name="train_info_fail">열차 정보를 불러올 수 없습니다.</string>
    <string name="train_info_empty">검색 결과 없습니다.</string>
    <string name="train_city_info_fail">도시 정보를 불러올 수 없습니다.</string>
    <string name="train_input_station">역이름을 입력해주세요.</string>
    <string name="train_select_arrival_station">도착역 이름을 선택해주세요.</string>
    <string name="train_select_depart_station">출발역 이름을 선택해주세요.</string>
    <string name="train_depart_arrival_station_same_warning">도착역과 출발역이 같습니다.</string>
    <string name="save_path">저장 위치</string>
    <string name="path">경로</string>
    <string name="select_departure_and_arrival">출발지&amp;도착지 선택</string>
    <string name="departure">출발지</string>
    <string name="arrival">도착지</string>
    <string name="add_my_plan_collection">마이플랜 컬랙션 추가하기</string>
    <string name="my_plan_collection_empty_string_warning">텍스트를 입력해주세요.</string>
    <string name="my_plan_collection_dialog_title">마이플랜 컬랙션 추가</string>
    <string name="my_plan_collection_dialog_detail">추가할 컬랙션 이름을 입력하세요.</string>
    <string name="my_plan_delete_fail">삭제에 실패하였습니다.</string>
    <string name="my_plan_get_plan_fail">목록을 가져오는데 실패하였습니다.</string>
    <string name="restaurant_name">식당 이름</string>
    <string name="search_name">통합 검색</string>
    <string name="input_more_than_two_letters_warning">최소 두글자 이상 입력해주세요!</string>
    <string name="no_match_result">일치하는 검색 결과가 없습니다.</string>
    <string name="phone_number_no_info">전화번호 정보가 없습니다.</string>
    <string name="address_no_info">주소 정보가 없습니다.</string>
    <string name="password_change_complete">비밀번호가 변경되었습니다.</string>
    <string name="password_change_failed">비밀번호 변경에 실패하였습니다..</string>
    <string-array name="search_category">
        <item>관광지</item>
        <item>문화시설</item>
        <item>레포츠</item>
        <item>문화시설</item>
        <item>축제/행사</item>
        <item>음식점</item>
    </string-array>
    <string-array name="city_name_array">
        <item>지역선택</item>
        <item>서울</item>
        <item>인천</item>
        <item>대전</item>
        <item>대구</item>
        <item>광주</item>
        <item>부산</item>
        <item>울산</item>
        <item>세종</item>
        <item>경기도</item>
        <item>강원도</item>
        <item>충청북도</item>
        <item>충청남도</item>
        <item>경상북도</item>
        <item>경상남도</item>
        <item>전라북도</item>
        <item>전라남도</item>
        <item>제주도</item>
    </string-array>
    <string-array name="default_array">
        <item>시군구 선택</item>
    </string-array>
    <string-array name="seoul_array">
        <item>강남구</item>
        <item>강동구</item>
        <item>강북구</item>
        <item>강서구</item>
        <item>관악구</item>
        <item>광진구</item>
        <item>구로구</item>
        <item>금천구</item>
        <item>노원구</item>
        <item>도봉구</item>
        <item>동대문구</item>
        <item>동작구</item>
        <item>마포구</item>
        <item>서대문구</item>
        <item>서초구</item>
        <item>성동구</item>
        <item>성북구</item>
        <item>송파구</item>
        <item>양천구</item>
        <item>영등포구</item>
        <item>용산구</item>
        <item>은평구</item>
        <item>종로구</item>
        <item>중구</item>
        <item>중랑구</item>
    </string-array>
    <string-array name="incheon_array">
        <item>강화군</item>
        <item>계양구</item>
        <item>미추홀구</item>
        <item>남동구</item>
        <item>동구</item>
        <item>부평구</item>
        <item>서구</item>
        <item>연수구</item>
        <item>옹진군</item>
        <item>중구</item>
    </string-array>
    <string-array name="dajeon_array">
        <item>대덕구</item>
        <item>동구</item>
        <item>서구</item>
        <item>유성구</item>
        <item>중구</item>
    </string-array>
    <string-array name="daegu_array">
        <item>남구</item>
        <item>달서구</item>
        <item>달성군</item>
        <item>동구</item>
        <item>북구</item>
        <item>서구</item>
        <item>수성구</item>
        <item>중구</item>
    </string-array>
    <string-array name="gangju_array">
        <item>광산구</item>
        <item>남구</item>
        <item>동구</item>
        <item>북구</item>
        <item>서구</item>
    </string-array>
    <string-array name="busan_array">
        <item>강서구</item>
        <item>금정구</item>
        <item>기장군</item>
        <item>남구</item>
        <item>동구</item>
        <item>동래구</item>
        <item>부산진구</item>
        <item>북구</item>
        <item>사상구</item>
        <item>사하구</item>
        <item>서구</item>
        <item>수영구</item>
        <item>연제구</item>
        <item>영도구</item>
        <item>중구</item>
        <item>해운대구</item>
    </string-array>
    <string-array name="ulsan_array">
        <item>중구</item>
        <item>남구</item>
        <item>동구</item>
        <item>북구</item>
        <item>울주군</item>
    </string-array>
    <string-array name="saejong_array">
        <item>세종시</item>
    </string-array>
    <string-array name="gunggi_array">
        <item>가평군</item>
        <item>고양시</item>
        <item>과천시</item>
        <item>광명시</item>
        <item>구리시</item>
        <item>군포시</item>
        <item>김포시</item>
        <item>남양주시</item>
        <item>동두천시</item>
        <item>부천시</item>
        <item>성남시</item>
        <item>수원시</item>
        <item>시흥시</item>
        <item>안산시</item>
        <item>안성시</item>
        <item>안양시</item>
        <item>양주시</item>
        <item>양평군</item>
        <item>여주시</item>
        <item>연천군</item>
        <item>오산시</item>
        <item>용인시</item>
        <item>의왕시</item>
        <item>의정부시</item>
        <item>이천시</item>
        <item>파주시</item>
        <item>평택시</item>
        <item>포천시</item>
        <item>하남시</item>
        <item>화성시</item>
    </string-array>
    <string-array name="gunggi_festival_array">
        <item>가평군</item>
        <item>고양시</item>
        <item>과천시</item>
        <item>광명시</item>
        <item>광주시</item>
        <item>구리시</item>
        <item>군포시</item>
        <item>김포시</item>
        <item>남양주시</item>
        <item>동두천시</item>
        <item>부천시</item>
        <item>성남시</item>
        <item>수원시</item>
        <item>시흥시</item>
        <item>안산시</item>
        <item>안성시</item>
        <item>안양시</item>
        <item>양주시</item>
        <item>양평군</item>
        <item>여주시</item>
        <item>연천군</item>
        <item>오산시</item>
        <item>용인시</item>
        <item>의왕시</item>
        <item>의정부시</item>
        <item>이천시</item>
        <item>파주시</item>
        <item>평택시</item>
        <item>포천시</item>
        <item>하남시</item>
        <item>화성시</item>
    </string-array>
    <string-array name="gangwon_array">
        <item>강릉시</item>
        <item>고성군</item>
        <item>동해시</item>
        <item>삼척시</item>
        <item>속초시</item>
        <item>양구군</item>
        <item>양양군</item>
        <item>영월군</item>
        <item>원주시</item>
        <item>인제군</item>
        <item>정선군</item>
        <item>철원군</item>
        <item>춘천시</item>
        <item>태백시</item>
        <item>평창군</item>
        <item>홍천군</item>
        <item>화천군</item>
        <item>횡성군</item>
    </string-array>
    <string-array name="chungchungbuk_array">
        <item>괴산군</item>
        <item>단양군</item>
        <item>보은군</item>
        <item>영동군</item>
        <item>옥천군</item>
        <item>음성군</item>
        <item>제천시</item>
        <item>진천군</item>
        <item>청원군</item>
        <item>청주시</item>
        <item>충주시</item>
        <item>증평군</item>
    </string-array>
    <string-array name="chungchungnam_array">
        <item>공주시</item>
        <item>금산군</item>
        <item>논산시</item>
        <item>당진시</item>
        <item>보령시</item>
        <item>부여군</item>
        <item>서산시</item>
        <item>서천군</item>
        <item>아산시</item>
        <item>예산군</item>
        <item>천안시</item>
        <item>청양군</item>
        <item>태안군</item>
        <item>홍성군</item>
        <item>계룡시</item>
    </string-array>
    <string-array name="gyungsangbuk_array">
        <item>경산시</item>
        <item>경주시</item>
        <item>고령군</item>
        <item>구미시</item>
        <item>군위군</item>
        <item>김천시</item>
        <item>문경시</item>
        <item>봉화군</item>
        <item>상주시</item>
        <item>성주군</item>
        <item>안동시</item>
        <item>영덕군</item>
        <item>영양군</item>
        <item>영주시</item>
        <item>영천시</item>
        <item>예천군</item>
        <item>울릉군</item>
        <item>울진군</item>
        <item>의성군</item>
        <item>청도군</item>
        <item>청송군</item>
        <item>칠곡군</item>
        <item>포항시</item>
    </string-array>
    <string-array name="gyungsangnam_array">
        <item>거제시</item>
        <item>거창군</item>
        <item>고성군</item>
        <item>김해시</item>
        <item>남해군</item>
        <item>마산시</item>
        <item>밀양시</item>
        <item>사천시</item>
        <item>산청군</item>
        <item>양산시</item>
        <item>의령군</item>
        <item>진주시</item>
        <item>진해시</item>
        <item>창녕군</item>
        <item>창원시</item>
        <item>통영시</item>
        <item>하동군</item>
        <item>함안군</item>
        <item>함양군</item>
        <item>합천군</item>
    </string-array>
    <string-array name="junrabuk_array">
        <item>고창군</item>
        <item>군산시</item>
        <item>김제시</item>
        <item>남원시</item>
        <item>무주군</item>
        <item>부안군</item>
        <item>순창군</item>
        <item>완주군</item>
        <item>익산시</item>
        <item>임실군</item>
        <item>장수군</item>
        <item>전주시</item>
        <item>정읍시</item>
        <item>진안군</item>
    </string-array>
</resources>