<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="always|withText"
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|withText"
        android:title="@string/bottom_nav_search" />

    <item
        android:id="@+id/navigation_my_plan"
        android:icon="@drawable/ic_myplan"
        app:showAsAction="always|withText"
        android:title="@string/bottom_nav_my_plan" />
    <item
        android:id="@+id/navigation_my_info"
        android:icon="@drawable/ic_myinfo"
        app:showAsAction="always|withText"
        android:title="@string/bottom_nav_my_info" />
</menu>