<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/my_plan_departure_and_arrival_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_radius_top_20dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:behavior_hideable="true"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/line_gray5_3dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/select_departure_and_arrival"
            android:textSize="20sp" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:src="@drawable/line_gray5_3dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/departure"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/my_plan_departure_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:text="@string/arrival"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/my_plan_arrival_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/my_plan_get_recommend_path_button"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rect_peach_gradient"
            android:text="여행 경로 추천 받기"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>